Fixed build scripts to build sns influxdb product