@@ -6,9 +6,19 @@
 SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 source ${SCRIPT_DIR}/env.sh
 
-${SCRIPT_DIR}/make_comp_repo.sh --with-aux
+SNS_INFLUXDB="N"
+
+for arg in "$@"
+do
+    if [ "$arg" == "--with-influxdb" ]
+    then
+	SNS_INFLUXDB="Y"
+    fi
+done
 
 set -x
+
+${SCRIPT_DIR}/make_comp_repo.sh ${@}
 
 function build_in {
     result=1
@@ -32,25 +42,48 @@ cd $CSS_BUILD_DIR
 
 #rm -rf *.log
 
-export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=2024m -XX:-UseGCOverheadLimit"
+export MAVEN_OPTS="-Xmx2048m -XX:-UseGCOverheadLimit"
 #BASE_OPTS="-e -X -s $MSET"
 BASE_OPTS="-s $MSET"
 OPTS="${BASE_OPTS} clean verify"
 
+######## Build Diirt
 #build_in diirt 0
 
+######## Build Maven OSGI bundles
 #build_in maven-osgi-bundles 1
 
+######## Build CS Studio third party
 #build_in cs-studio-thirdparty 2
 
-#build_in cs-studio/core 3 core
+######## Optional: Build influxdb java library
+if [ "${SNS_INFLUXDB}" == "Y" ]
+then
+    OPTS="${BASE_OPTS} clean install -DskipTests=true"
+    #build_in influxdb-java a1
 
+    OPTS="${BASE_OPTS} clean p2:site"
+    #build_in influxdb-java/repository a1_1 influxdb-java-p2
+fi
+
+######## Build CS Studio Core and Applications
+OPTS="${BASE_OPTS} clean verify"
+#build_in cs-studio/core 3 core
 #build_in cs-studio/applications 4 applications
 
+######## Optional: Build archive influxdb plugins
+if [ "${SNS_INFLUXDB}" == "Y" ]
+then
+    OPTS="${BASE_OPTS} -U -up clean verify"
+    build_in archive-influxdb a2
+fi
+
+######## Build the display builder
 CSS_REPO=file:${CSS_COMP_REPO}
 OPTS="${BASE_OPTS} -Dcss-repo=$CSS_REPO clean verify"
 #build_in org.csstudio.display.builder 5 display_builder
 
+######## Build SNS product
 OPTS="${BASE_OPTS} clean verify"
 build_in org.csstudio.sns 6 sns
 
